--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') %>
+  <div class="container">
   <div class="dashboard-wrap">
     <div class="dashboard-welcome">
       <h1>Olá, <%= user.name %>!</h1>
@@ -44,5 +45,6 @@
         <% } %>
       </div>
     </div>
+  </div>
   </div>
 <%- include('partials/footer') %>
