--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header') %>
+  <div class="container">
   <section class="section">
     <div class="page-head">
       <h1>Projetos abertos</h1>
@@ -22,4 +23,5 @@
     <p>Nenhum projeto aberto no momento. <% if (user) { %><a href="/projetos/publicar">Seja o primeiro a publicar</a>.<% } %></p>
     <% } %>
   </section>
+  </div>
 <%- include('../partials/footer') %>
