--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header') %>
+  <div class="container">
   <section class="section project-detail-wrap">
     <a href="/projetos" class="back-link">← Voltar aos projetos</a>
     <h1><%= project.title %></h1>
@@ -41,4 +42,5 @@
       <% } %>
     </div>
   </section>
+  </div>
 <%- include('../partials/footer') %>
