--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') %>
+  <div class="container">
   <div class="form-page">
     <div class="form-card">
       <h1>Entrar</h1>
@@ -14,5 +15,6 @@
       </form>
       <p class="form-footer">Não tem conta? <a href="/cadastro">Cadastre-se</a></p>
     </div>
+  </div>
   </div>
 <%- include('partials/footer') %>
