--- a/views/projects/create.ejs
+++ b/views/projects/create.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header') %>
+  <div class="container">
   <div class="form-page">
     <div class="form-card" style="max-width: 520px;">
       <h1>Publicar projeto</h1>
@@ -32,5 +33,6 @@
         <button type="submit" class="btn btn-primary">Publicar</button>
       </form>
     </div>
+  </div>
   </div>
 <%- include('../partials/footer') %>
