--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') %>
+  <div class="container">
   <div class="form-page">
     <div class="form-card">
       <h1>Criar conta</h1>
@@ -24,5 +25,6 @@
       </form>
       <p class="form-footer">Já tem conta? <a href="/login">Entrar</a></p>
     </div>
+  </div>
   </div>
 <%- include('partials/footer') %>
