--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
       theme: {
         extend: {
           colors: {
-            brand: '#6366f1',
-            'brand-light': '#818cf8',
+            brand: '#f59e0b',
+            'brand-light': '#fbbf24',
           },
           fontFamily: { sans: ['Plus Jakarta Sans', 'system-ui', 'sans-serif'] },
         },
