--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,7 @@
         <a href="/projetos">Projetos</a>
         <% if (user) { %>
           <a href="/dashboard">Dashboard</a>
+          <a href="/perfil">Perfil</a>
         <% } else { %>
           <a href="/login">Entrar</a>
         <% } %>
