--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,9 +9,11 @@
         <% if (!user) { %>
           <a href="/cadastro" class="btn btn-primary btn-large">Criar conta</a>
           <a href="/projetos" class="btn btn-outline btn-large">Ver projetos</a>
+          <a href="/freelancers" class="btn btn-ghost btn-large">Encontrar freelancers</a>
         <% } else { %>
           <a href="/projetos" class="btn btn-primary btn-large">Ver projetos</a>
           <a href="/projetos/publicar" class="btn btn-outline btn-large">Publicar projeto</a>
+          <a href="/freelancers" class="btn btn-ghost btn-large">Encontrar freelancers</a>
         <% } %>
       </div>
     </div>
